# nbinomPlot

./: .Rbuildignore  .gitignore  DESCRIPTION  Dockerfile  Dockerfile_shiny  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md
.github/: setup.sh
.github/workflows/: R-CMD-check.yaml
R/: app_config.R  app_server.R  app_ui.R  fct_cpp_nbinom.R  fct_nbinom.R  mod_fix_size_mu.R  mod_main_panel.R  mod_mu_var.R  mod_nbinom.R  mod_params.R  mod_prob_var.R  mod_quantile_var.R  mod_reset.R  mod_size_var.R  mod_update.R  utils_helpers.R
data-raw/: my_dataset.R
dev/: 01_start.R  02_dev.R  03_deploy.R  cloc_package.R
inst/: WORDLIST  golem-config.yml  howToMake.Rmd  howToMake_jp.Rmd  nbinomPlot.Rmd
man/: NbinomDist.Rd  calculate_nbinom_density.Rd  calculate_nbinom_density_cpp.Rd  calculate_nbinom_mu_from_size_prob.Rd  calculate_nbinom_size_from_prob_mu.Rd  draw_nbinom_density.Rd  get_default_nbinom_prob.Rd  get_default_nbinom_size.Rd  get_default_step.Rd  get_nbinom_density_dataframe.Rd  is_numeric.Rd  read_config_parameters.Rd
src/: code.cpp
tests/: CMakeLists.txt  code.h  test_code.cpp
tests/testthat/: test-app.R  test-app_config.R  test-fct_cpp_nbinom.R  test-fct_nbinom.R  test-helpers.R  test-mod_fix_size_mu.R  test-mod_main_panel.R  test-mod_mu_var.R  test-mod_nbinom.R  test-mod_params.R  test-mod_prob_var.R  test-mod_quantile_var.R  test-mod_reset.R  test-mod_size_var.R  test-mod_update.R  test-utils_helpers.R
tests/testthat/_snaps/: mod_fix_size_mu.md  mod_main_panel.md  mod_mu_var.md  mod_nbinom.md  mod_params.md  mod_prob_var.md  mod_quantile_var.md  mod_reset.md  mod_size_var.md  mod_update.md
vignettes/: nbinomPlot.Rmd
